Improve Dockerfile security